fix build to create dist dir, move checksum back to deploy
Signed-off-by: Todd Campbell <todd@sensu.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ services:
 - docker
 script:
 - ./build.sh
-- ./checksum.sh
 deploy:
   skip_cleanup: true
+  provider: script
+  script: bash ./checksum.sh
+  on:
+    tags: true
   provider: script
   script: bash ./upload.sh
   on:
